--- a/packages/dva-taro/package.json
+++ b/packages/dva-taro/package.json
@@ -1,61 +1,43 @@
 {
-  "name": "dva",
-  "version": "2.6.0-beta.4",
-  "description": "React and redux based, lightweight and elm-style framework.",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "typings": "index.d.ts",
-  "sideEffects": false,
+  "name": "dva-taro",
+  "version": "1.0.0",
+  "description": "在taro中使用dva",
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dvajs/dva"
+    "url": "https://github.com/slemv/dva"
   },
-  "homepage": "https://github.com/dvajs/dva",
+  "homepage": "https://github.com/slemv/dva",
   "keywords": [
     "dva",
-    "alibaba",
-    "react",
-    "react-native",
-    "redux",
-    "redux-saga",
-    "elm",
-    "framework",
-    "frontend"
-  ],
-  "authors": [
-    "chencheng <sorrycc@gmail.com> (https://github.com/sorrycc)"
+    "taro",
+    "redux-saga"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dvajs/dva/issues"
+    "url": "https://github.com/slemv/dva/issues"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
-    "@types/isomorphic-fetch": "^0.0.35",
-    "@types/react-router-dom": "^4.3.1",
-    "connected-react-router": "^6.3.2",
-    "dva-core": "1.6.0-beta.3",
-    "global": "^4.3.2",
-    "history": "^4.7.2",
-    "invariant": "^2.2.4",
-    "isomorphic-fetch": "^2.2.1",
-    "react-redux": "^7.0.1",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1"
+    "dva-core-taro": "1.2.0"
   },
-  "peerDependencies": {
-    "react": "^16.18.4",
-    "react-dom": "^16.18.4"
+  "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-transform-arrow-functions": "^7.2.0",
+    "@babel/plugin-transform-block-scoping": "^7.4.4",
+    "@babel/plugin-transform-parameters": "^7.4.4",
+    "@babel/preset-env": "^7.4.4"
   },
   "files": [
-    "dist",
+    "lib",
     "src",
-    "dynamic.js",
-    "fetch.js",
-    "index.js",
-    "router.js",
-    "saga.js",
-    "warnAboutDeprecatedCJSRequire.js",
-    "*.d.ts"
+    "index.js"
+  ],
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "IE 10"
   ]
 }
