--- a/packages/dva-core-taro/package.json
+++ b/packages/dva-core-taro/package.json
@@ -1,9 +1,8 @@
 {
   "name": "dva-core-taro",
-  "version": "1.1.0",
-  "description": "修改dva-core引入redux-saga方式，以解决taro编译后导致无法解析到redux-saga文件的问题",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "version": "1.2.0",
+  "description": "修改dva-core引入redux-saga方式，以解决taro编译后导致微信开发工具无法解析到redux-saga文件的问题",
+  "main": "lib/index.js",
   "sideEffects": false,
   "repository": {
     "type": "git",
