--- a/packages/dva-core-taro/package.json
+++ b/packages/dva-core-taro/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dva-core-taro",
-  "version": "1.2.0",
+  "version": "1.2.2",
   "description": "修改dva-core引入redux-saga方式，以解决taro编译后导致微信开发工具无法解析到redux-saga文件的问题",
   "main": "lib/index.js",
   "sideEffects": false,
@@ -20,7 +20,7 @@
     "url": "https://github.com/slmev/dva/issues"
   },
   "scripts": {
-    "babelBuild": "babel src --out-dir lib"
+    "build": "babel src --out-dir lib"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
@@ -29,7 +29,8 @@
     "invariant": "^2.2.1",
     "is-plain-object": "^2.0.3",
     "redux-saga": "^0.16.0",
-    "warning": "^3.0.0"
+    "warning": "^3.0.0",
+    "redux": "^4.0.1"
   },
   "peerDependencies": {
     "redux": "4.x"
@@ -41,8 +42,7 @@
     "@babel/plugin-transform-arrow-functions": "^7.2.0",
     "@babel/plugin-transform-block-scoping": "^7.4.4",
     "@babel/plugin-transform-parameters": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "redux": "^4.0.1"
+    "@babel/preset-env": "^7.4.4"
   },
   "files": [
     "lib",
